<resources>

    //com.larsnyborgpedersen.meditationforboern2.MainActivity
    <string name="app_name">Meditation for Børn Gratis</string>
    <string name="mainActivityHeadline">Meditation for Børn</string>
    <string name="chooseMeditationScreenButtonText">Guidede meditationer</string>
    <string name="chooseMeditationScreenButtonText2">Hvordan mediterer man?</string>
    <string name="chooseMeditationScreenButtonText3">Kontakt</string>

    //ChooseMeditationScreen
    <string name="chooseMeditation">Hvilken Meditation?</string>
    <string name="bodyScan7MinutesButtonText">Kropsscanning  7:35</string>
    <string name="bodyScan13MinutesButtonText">Kropsscanning 13:10</string>
    <string name="visualizationButtonText">Visualisering 7:40 </string>
    <string name="lovingKindnessButtonText">Kærlig Meditation 7:15</string>
    <string name="rhythmicBreathing5MinutesButtonText">Rytmisk Vejrtrækning 5:00</string>
    <string name="rhythmicBreathing10MinutesButtonText">Rytmisk Vejrtrækning 10:00</string>
    <string name="rhythmicBreathing15MinutesButtonText">Rytmisk Vejrtrækning 15:00</string>
    <string name="rhythmicBreathing20MinutesButtonText">Rytmisk Vejrtrækning 20:00</string>

    //HowToMeditateScreen
    <string name="HowToMeditateScreenHeadline">Oftest stillede spørgsmål</string>
    <string name="question1">Hvordan mediterer man</string>
    <string name="answer1">Du skal blot lytte til min stemme i de guidede meditationer. Hvis du bliver distraheret, så fokuserer du blot på min stemme i meditationen igen. Det er helt normalt at komme til at tænke over andre ting og dagdrømme. Hvis det sker, så blot fokuser på min stemme igen.</string>
    <string name="question2">Hvornår bør jeg mediterer?</string>
    <string name="answer2">Du kan mediterer på alle tidspunkter af dagen. Det vigtigste er at du gør det hver dag, og gør det til en væne. Det er dog en fordel, at gøre det så lang tid efter man har spist som muligt, så før et måltid kan være et ekstra godt tidspunkt. Tre gode tidspunkter der kan anbefales er om morgenen, efter skole og før sengetid.</string>
    <string name="question3">Kan man bruge disse meditationer til at falde i søvn med?</string>
    <string name="answer3">Ja det kan man sagtens.</string>
    <string name="question4">Hvad får man ud af meditation?</string>
    <string name="answer4">Det er videnskabeligt bevist at det giver bedre immunsystem, hjælper mod inflammation, giver flere positive følelser, hjælper mod depression, hjælper mod angst, hjælper mod stress, giver bedre følelsesmæssig intelligens, giver en mere medfølelse, giver en bedre fokus, forbedre ens hukommelse, gør en mere rolig, gør en mere glad og meget meget mere.</string>
    <string name="question5"></string>
    <string name="answer5"></string>

    //ContactScreen
    <string name="contact">Kontakt</string>
    <string name="contactInfo">Hvis du har spørgsmål eller vil kontakte mig, så kan det ske på følgende email:\n\n    MeditationForBoern@gmail.com</string>


    //MeditationScreen
    <string name="visualizationHeadline">Visualisering</string>
    <string name="visualizationDescription">Denne meditation varer 7 minutter. I denne meditation vil vi forestille os noget hvidt behageligt lys ved brystet, og derefter vil lyset sprede sig ud i kroppen. Meditationen gør ofte en afslappet og giver en behagelig fornemmelse i kroppen.</string>
    <string name="bodyScan7MinHeadline">Kropsscanning</string>
    <string name="bodyScan7MinDescription">Denne meditation varer 7 minutter. I denne meditation vil vi mærke hvordan vores krop føles. Vi vil starte nede ved tæerne og derefter skanne hele kroppen igennem. Denne meditation kan ofte få ens krop til at slappe af.</string>
    <string name="bodyScan13MinHeadline">Kropsscanning</string>
    <string name="bodyScan13MinDescription">Denne meditation varer 13 minutter. I denne meditation vil vi mærke hvordan vores krop føles. Vi vil starte nede ved tæerne og derefter skanne hele kroppen igennem. Denne meditation kan ofte få ens krop til at slappe af.</string>
    <string name="lovindKindnessHeadline">Kærlig Meditation</string>
    <string name="lovindKindnessDescription">Denne meditation varer 7 minutter. I denne meditation vil vi sende positive ønsker til os selv først og derefter til andre. Denne meditation er god til at skabe empati, og er en meditation man bliver mere glad af.</string>
    <string name="rhythmicBreathing5MinHeadline">Rytmisk Vejrtrækning</string>
    <string name="rhythmicBreathing5MinDescription">Denne meditation varer 5 minutter. I denne meditation vil vi indånde mens vi tæller til 4, holde i 2 og udånde imens vi tæller til 4. Man kan også gøre det hurtigere eller langsommere hvis man vil. Denne meditation er god til hurtigt at gøre en mere rolig.</string>
    <string name="rhythmicBreathing10MinHeadline">Rytmisk Vejrtrækning</string>
    <string name="rhythmicBreathing10MinDescription">Denne meditation varer 10 minutter. I denne meditation vil vi indånde mens vi tæller til 4, holde i 2 og udånde imens vi tæller til 4. Man kan også gøre det hurtigere eller langsommere hvis man vil. Denne meditation er god til hurtigt at gøre en mere rolig.</string>
    <string name="rhythmicBreathing15MinHeadline">Rytmisk Vejrtrækning</string>
    <string name="rhythmicBreathing15MinDescription">Denne meditation varer 15 minutter. I denne meditation vil vi indånde mens vi tæller til 4, holde i 2 og udånde imens vi tæller til 4. Man kan også gøre det hurtigere eller langsommere hvis man vil. Denne meditation er god til hurtigt at gøre en mere rolig.</string>
    <string name="rhythmicBreathing20MinHeadline">Rytmisk Vejrtrækning</string>
    <string name="rhythmicBreathing20MinDescription">Denne meditation varer 20 minutter. I denne meditation vil vi indånde mens vi tæller til 4, holde i 2 og udånde imens vi tæller til 4. Man kan også gøre det hurtigere eller langsommere hvis man vil. Denne meditation er god til hurtigt at gøre en mere rolig.</string>
</resources>
