<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context="com.larsnyborgpedersen.meditationforboern2.HowToMeditateScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:typeface="serif"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="28sp"
        android:text="@string/HowToMeditateScreenHeadline" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/logoet2min"/>



        <TextView
            android:id="@+id/question1"
            android:text="@string/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:typeface="serif"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"/>


        <TextView
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bagvedknapper2"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/answer1"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/question2"
            android:text="@string/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:typeface="serif"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/answer2"
            android:text="@string/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:textColor="@color/blue"
            android:typeface="serif"
            android:textSize="16sp"
            android:background="@drawable/bagvedknapper2"/>

        <TextView
            android:id="@+id/question3"
            android:text="@string/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:typeface="serif"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/answer3"
            android:text="@string/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:textColor="@color/blue"
            android:typeface="serif"
            android:textSize="16sp"
            android:background="@drawable/bagvedknapper2"/>

        <TextView
            android:id="@+id/question4"
            android:text="@string/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:typeface="serif"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/answer4"
            android:text="@string/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:textColor="@color/blue"
            android:typeface="serif"
            android:textSize="16sp"
            android:background="@drawable/bagvedknapper2"/>



    </LinearLayout>

</ScrollView>
