<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context="com.larsnyborgpedersen.meditationforboern2.MainActivity">





    <TextView
        android:layout_weight="1.5"
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:typeface="serif"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/chooseMeditation" />



    <ImageView
        android:layout_weight="4.5"
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:src="@drawable/logoet2min"/>

    <ScrollView
        android:layout_weight="5"
        android:layout_height="0px"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <Button
        android:id="@+id/visualizationButton"
        android:background="@drawable/knaphvordanmeditereman"
        android:layout_gravity="center_horizontal"
        android:text="@string/visualizationButtonText"
        android:textAllCaps="false"
        android:typeface="serif"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_marginTop="22dp"
        />



            <Button
                android:id="@+id/bodyScan7MinButton"
                android:background="@drawable/knaphvordanmeditereman"
                android:layout_gravity="center_horizontal"
                android:text="@string/bodyScan7MinutesButtonText"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_marginTop="22dp"
                />

            <Button
                android:id="@+id/bodyScan13MinButton"
                android:background="@drawable/knaphvordanmeditereman"
                android:layout_gravity="center_horizontal"
                android:text="@string/bodyScan13MinutesButtonText"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_marginTop="22dp"
                />

            <Button
                android:id="@+id/lovingKindnessButton"
                android:background="@drawable/knaphvordanmeditereman"
                android:layout_gravity="center_horizontal"
                android:text="@string/lovingKindnessButtonText"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_marginTop="22dp"/>

            <Button
                android:id="@+id/rhythmicBreathing5MinButton"
                android:background="@drawable/knaphvordanmeditereman"
                android:layout_gravity="center_horizontal"
                android:text="@string/rhythmicBreathing5MinutesButtonText"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_marginTop="22dp"/>

            <Button
                android:id="@+id/rhythmicBreathing10MinButton"
                android:background="@drawable/knaphvordanmeditereman"
                android:layout_gravity="center_horizontal"
                android:text="@string/rhythmicBreathing10MinutesButtonText"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_marginTop="22dp"/>


            <Button
                android:id="@+id/rhythmicBreathing15MinButton"
                android:background="@drawable/knaphvordanmeditereman"
                android:layout_gravity="center_horizontal"
                android:text="@string/rhythmicBreathing15MinutesButtonText"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_marginTop="22dp"/>

            <Button
                android:id="@+id/rhythmicBreathing20MinButton"
                android:background="@drawable/knaphvordanmeditereman"
                android:layout_gravity="center_horizontal"
                android:text="@string/rhythmicBreathing20MinutesButtonText"
                android:textAllCaps="false"
                android:typeface="serif"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_marginTop="22dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>